--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,17 @@ a{
     color: currentColor;
 }
 
+button{
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    text-align: inherit;
+    font: inherit;
+    border-radius: 0;
+    appearance: none;
+}
+
 /* DEBUG */
 .debug{
     border: 2px solid purple;
@@ -84,6 +95,10 @@ a{
 
 .play{
     width: 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .vol{
@@ -108,6 +123,45 @@ a{
     font-weight: 400;
     color: #7B7B7B;
 }
+
+.cta-play{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.btn-play{
+    font-size: 30px;
+    color: white;
+}
+
+.btn-music{
+    color: white;
+}
+
+.time{
+    color: white;
+    font-size: 11px;
+}
+
+.time-play{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    row-gap: 10px;
+}
+
+.music::after{
+    content: '';
+    display: block;
+    width: 430px;
+    height: 5px;
+    border-radius: 999px;
+    background-color: #7B7B7B;
+}
+
 /* MEDIA QUERY */
 
 @media (max-width: 878px){
