--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,6 @@ ul, ol{
 	gap: 20px;
 	font-size: 12px;
 	align-items: center;
-	padding: 14px 0;
     color: white;
 }
 
@@ -210,6 +209,14 @@ ul, ol{
     margin-bottom: 12px;
 }
 
+.line-green{
+    margin-left: -20px;
+    height: 35px;
+    width: 3px;
+    background-color: greenyellow;
+    margin-right: 8px;
+}
+
 .home, .search, .library{
     width: 22px;
 }
@@ -273,6 +280,7 @@ ul, ol{
     /* justify-content: space-between; */
     gap: 10px;
     margin-top: auto;
+    margin-bottom: 8px;
 }
 
 
