--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ img{
 
 a{
     color: currentColor;
+    text-decoration: none;
 }
 
 button {
@@ -69,17 +70,37 @@ ul, ol{
     flex-grow: 1;
     order: 2;
     background-color: var(--main);
+    overflow: auto;
+    position: relative;
 }
+
 
 /* NAVBAR */
 
 .upgrade{
     height: 95px;
     background-color: #00000088;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    right: 0;
+
+}
+
+.btn-upgrade{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    border-radius: 999px;
+    border: 2px solid white;
+    color: white;
+    font-weight: 700;
+    font-family: "Montserrat", system-ui;
+    padding: 10px 30px;
 }
 
 .navbar{
-    margin-top: 20px;
+    margin-top: 110px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -388,5 +409,9 @@ ul, ol{
         margin: 0 auto;
         margin-bottom: 15px;
         margin-top: 15px;
+    }
+
+    .install-app, .name-user{
+        display: none;
     }
 }
