--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,54 @@ ul, ol{
     color: #7B7B7B;
 }
 
+/* CONTENT */
+
+.recently{
+    padding: 35px 20px;
+}
+
+.row{
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.col-16{
+    width: calc(100% / 6);
+}
+
+.title-category{
+    color: white;
+    font-weight: 800;
+    font-size: 25px;
+    margin-bottom: 30px;
+}
+
+.card-play{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 8px;
+}
+
+.play-img{
+    width: 179px;
+    margin-bottom: 10px;
+}
+
+.play-title{
+    font-size: 15px;
+    color: white;
+}
+
+.card-play .sub-title{
+    font-size: 12px;
+    color: #7B7B7B;
+}
+
 /* PLAYER */
 
 .play-bar{
@@ -392,10 +440,6 @@ ul, ol{
     }
 
     .playlist{
-        display: none;
-    }
-
-    .profile{
         display: none;
     }
 
