--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,10 @@ ul, ol{
 .row{
     display: flex;
     /* justify-content: space-between; */
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
+    margin-bottom: 40px;
 }
 
 .col-16{
@@ -143,12 +144,13 @@ ul, ol{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
     gap: 8px;
+    max-width: 180px;
+    text-align: center;
 }
 
 .play-img{
-    width: 179px;
+    width: 180px;
     margin-bottom: 10px;
 }
 
@@ -160,6 +162,16 @@ ul, ol{
 .card-play .sub-title{
     font-size: 12px;
     color: #7B7B7B;
+}
+
+.title-category.personal-category{
+    margin-bottom: 10px;
+}
+
+.sub-title.sub-category{
+    margin-bottom: 20px;
+    color: #7B7B7B;
+    font-size: 12px;
 }
 
 /* PLAYER */
